replacing the individual stylization by tag of the tags h1 and h2 by stylizing the class now common to the two tags and thus repurposing code

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 	padding: 30px;
 }
 
-h1 {
+.titulo-centralizado {
 	text-align: center;
 }
 
@@ -34,10 +34,6 @@ em strong {
 .beneficios {
 	background: #FFFFFF;
 	padding: 20px;
-}
-
-h2 {
-	text-align: center;
 }
 
 ul {
